--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,17 +15,20 @@
     "--ulimit",
     "nofile=65536:65536"
   ],
-  "settings": {
-    "terminal.integrated.defaultProfile.linux": "bash",
-    "editor.formatOnSave": true
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.defaultProfile.linux": "bash",
+        "editor.formatOnSave": false
+      },
+      "extensions": [
+        "ms-vscode.cpptools-extension-pack",
+        "ms-vscode.makefile-tools",
+        "twxs.cmake",
+        "eamodio.gitlens"
+      ]
+    }
   },
-  "extensions": [
-    "ms-vscode.cpptools",
-    "twxs.cmake",
-    "ms-azuretools.vscode-docker",
-    "eamodio.gitlens",
-    "ms-vscode.makefile-tools"
-  ],
   "remoteUser": "root",
   "forwardPorts": [
     3000,
